# Synthese

./: CMakeLists.txt  Projet_Image_M2.pro  chip.cpp  chip.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  view.cpp  view.h
